--- a/app/src/main/res/layout/fragment_checkbox_parameter.xml
+++ b/app/src/main/res/layout/fragment_checkbox_parameter.xml
@@ -8,4 +8,5 @@
     android:layoutDirection="rtl"
     android:textSize="20sp"
     android:textColor="@color/white"
-    tools:background="@color/black"/>
+    tools:background="@color/black"
+    android:fontFamily="@font/jura_bold"/>
