--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <RelativeLayout
+        android:id="@+id/main_background"
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:background="@drawable/main_bg">
+    </RelativeLayout>
+
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -13,13 +24,15 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        >
 
-        <LinearLayout
+        <com.github.furkankaplan.fkblurview.FKBlurView
+            android:id="@+id/fkBlurView"
             android:layout_width="match_parent"
             android:layout_height="70dp"
-            android:background="@color/header_color_default"
             android:elevation="20dp"
+            android:background="#11FFFFFF"
             android:orientation="horizontal">
 
             <Button
@@ -27,57 +40,97 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginHorizontal="10dp"
                 android:layout_weight="3"
+                android:layout_marginLeft="15dp"
+                android:background="@drawable/base_button"
                 android:text="Галерея"
-                style="@style/Custom.MainButtonStyle"/>
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:fontFamily="@font/jura_bold"
+                android:textSize="18dp"/>
 
             <Button
                 android:id="@+id/loginButton"
+                android:background="@drawable/action_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginHorizontal="10dp"
+                android:layout_marginHorizontal="15dp"
                 android:layout_weight="1"
-                android:text="Войти"
-                style="@style/Custom.MainButtonStyle"/>
-        </LinearLayout>
+                android:text="@string/SignInText"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintRight_toRightOf="@id/fkBlurView"
+                app:layout_constraintTop_toTopOf="parent"
+                android:fontFamily="@font/jura_bold"
+                android:textSize="18dp"/>
+        </com.github.furkankaplan.fkblurview.FKBlurView>
 
-        <LinearLayout
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="50dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="130dp"
+            android:padding="10dp"
+            android:backgroundTint="@color/transparent">
+        <com.github.furkankaplan.fkblurview.FKBlurView
+            android:id="@+id/fkBlurViewMenu"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/white"
-            android:orientation="vertical"
-            android:padding="10dp">
-
-            <Button
-                android:id="@+id/generationButtonGradients"
+            android:elevation="20dp"
+            android:background="#11E9E9E9"
+            android:orientation="horizontal">
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Градиенты"
-                style="@style/Custom.MainButtonStyle"/>
+                android:orientation="vertical"
+                android:paddingHorizontal="40dp"
+                android:paddingVertical="60dp"
+                android:layout_marginTop="100dp">
 
-            <Button
-                android:id="@+id/generationButtonShapes"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Фигуры"
-                style="@style/Custom.MainButtonStyle"/>
+                <Button
+                    android:id="@+id/generationButtonGradients"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/base_button"
+                    android:text="@string/gradients_btn_text"
+                    android:fontFamily="@font/jura_bold"
+                    android:textSize="18dp"/>
 
-            <Button
-                android:id="@+id/generationButtonInterference"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Интерференция"
-                style="@style/Custom.MainButtonStyle"/>
+                <Button
+                    android:id="@+id/generationButtonShapes"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/base_button"
+                    android:layout_marginTop="20dp"
+                    android:text="@string/figures_btn_text"
+                    android:fontFamily="@font/jura_bold"
+                    android:textSize="18dp"/>
 
-            <Button
-                android:id="@+id/generationButtonFractals"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Фракталы"
-                style="@style/Custom.MainButtonStyle"/>
-        </LinearLayout>
+                <Button
+                    android:id="@+id/generationButtonInterference"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/base_button"
+                    android:layout_marginTop="20dp"
+                    android:text="@string/interference_btn_text"
+                    android:fontFamily="@font/jura_bold"
+                    android:textSize="18dp"/>
+
+                <Button
+                    android:id="@+id/generationButtonFractals"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/base_button"
+                    android:layout_marginTop="20dp"
+                    android:text="@string/fractals_btn_text"
+                    android:fontFamily="@font/jura_bold"
+                    android:textSize="18dp"/>
+            </LinearLayout>
+        </com.github.furkankaplan.fkblurview.FKBlurView>
+        </androidx.cardview.widget.CardView>
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
