--- a/app/src/main/res/layout/fragment_authorization.xml
+++ b/app/src/main/res/layout/fragment_authorization.xml
@@ -6,14 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".AuthorizationFragment"
     android:orientation="vertical"
-    android:background="@color/white">
+    android:background="@color/android_studio_dark_theme">
 
     <ImageButton
         android:id="@+id/toBackButton"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:background="@drawable/baseline_keyboard_arrow_left_24"
-        android:backgroundTint="@color/black"/>
+        android:background="@drawable/back_icon"
+        android:backgroundTint="@color/white"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -28,7 +28,7 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="textPersonName"
-            android:hint="Имя"
+            android:hint="@string/username"
             style="@style/Custom.AuthEditTextStyle" />
 
         <EditText
@@ -37,7 +37,7 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="textPassword"
-            android:hint="Пароль"
+            android:hint="@string/password"
             style="@style/Custom.AuthEditTextStyle"/>
 
         <TextView
@@ -52,18 +52,24 @@
             android:id="@+id/authorizationButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Войти"
+            android:text="@string/sign_in"
+            android:background="@drawable/action_button"
             android:layout_marginTop="5dp"
-            style="@style/Custom.MainButtonStyle"/>
+            android:fontFamily="@font/jura_bold"
+            android:textSize="18sp"
+            android:textColor="@color/white"/>
 
         <Button
             android:id="@+id/to_registerButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Создать новый аккаунт"
+            android:text="@string/create_account"
             android:textSize="15sp"
             android:layout_marginTop="50dp"
-            style="@style/Custom.MainButtonStyle"/>
+            android:background="@drawable/action_button"
+            android:fontFamily="@font/jura_bold"
+            android:paddingHorizontal="8dp"
+            android:textColor="@color/white"/>
 
     </LinearLayout>
 </LinearLayout>
