--- a/app/src/main/res/layout/fragment_collection.xml
+++ b/app/src/main/res/layout/fragment_collection.xml
@@ -13,19 +13,20 @@
         android:orientation="horizontal"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="#AA000000">
+        android:background="#FF3E3A71">
         <ImageButton
             android:id="@+id/toMenuButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
             android:background="@color/transparent"
             android:onClick="onClickMenu"
             android:scaleType="fitCenter"
-            app:srcCompat="@drawable/menu_icon"
+            app:srcCompat="@drawable/home_icon"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginHorizontal="5dp"/>
+            android:layout_marginHorizontal="10dp"
+            app:tint="#FFE9E9E9"/>
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -43,13 +44,15 @@
                 android:textColor="@color/white"
                 android:textSize="20sp"
                 android:backgroundTint="@color/transparent"
+                android:fontFamily="@font/jura_bold"
                 />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="КОЛЕКЦИЯ"
                 android:textSize="29sp"
-                android:textColor="@color/white"/>
+                android:textColor="@color/white"
+                android:fontFamily="@font/jura_bold"/>
         </LinearLayout>
 
         <ImageButton
@@ -61,7 +64,8 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:background="@color/transparent"
-            android:layout_marginHorizontal="5dp"/>
+            android:layout_marginHorizontal="10dp"
+            app:tint="#FFE9E9E9"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.recyclerview.widget.RecyclerView
