--- a/app/src/main/res/layout/fragment_dropdown_parameter.xml
+++ b/app/src/main/res/layout/fragment_dropdown_parameter.xml
@@ -11,7 +11,8 @@
         android:layout_height="wrap_content"
         tools:text="Список вариантов"
         android:textColor="@color/white"
-        android:textSize="20sp"/>
+        android:textSize="20sp"
+        android:fontFamily="@font/jura_bold"/>
     <FrameLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -24,7 +25,10 @@
             android:layout_height="wrap_content"
             android:dropDownWidth="wrap_content"
             android:textAlignment="center"
-            android:spinnerMode="dropdown"/>
+            android:spinnerMode="dropdown"
+            android:fontFamily="@font/jura_bold"
+            android:textColor="@color/white"
+            android:background="@color/android_studio_dark_theme"/>
     </FrameLayout>
 
 </RelativeLayout>
