--- a/app/src/main/res/layout/fragment_expanded_wallpaper.xml
+++ b/app/src/main/res/layout/fragment_expanded_wallpaper.xml
@@ -14,16 +14,17 @@
         android:layout_height="match_parent"
         tools:src="@drawable/ic_launcher_background" />
 
-    <Button
+    <ImageButton
         android:id="@+id/collapseWallpaperButton"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:backgroundTint="#55FFFFFF"
-        android:text="X"
-        android:textColor="@color/black"
-        android:textSize="30sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_margin="5dp"
+        android:background="@drawable/close_button"
+        android:src="@drawable/close_icon"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:padding="15dp"
+        android:scaleType="fitCenter"/>
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/exportImageFragmentContainer"
