--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="transparent">#00000000</color>
-    <color name="header_color_default">#FF666670</color>
+    <color name="header_color_default">#FF3E3A71</color>
     <color name="gray_A">#AAAAAA</color>
     <color name="gray_5">#555555</color>
+    <color name="android_studio_dark_theme">#2D2F31</color>
 </resources>
