--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.WallpaperGenerator" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Theme.WallpaperGenerator" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
         <item name="android:windowFullscreen">true</item>
@@ -31,7 +31,7 @@
     <style name="Custom.AuthEditTextStyle" parent="Theme.AppCompat.Light">
         <item name="android:textColorHint">@color/gray_A</item>
         <item name="android:backgroundTint">@color/gray_5</item>
-        <item name="android:textColor">@color/black</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 
     <style name="Theme.WallpaperGenerator.NoActionBar">
