--- a/app/src/main/res/layout/fragment_authorization.xml
+++ b/app/src/main/res/layout/fragment_authorization.xml
@@ -52,7 +52,7 @@
             android:id="@+id/authorizationButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/sign_in"
+            android:text="@string/login"
             android:background="@drawable/action_button"
             android:layout_marginTop="5dp"
             android:fontFamily="@font/jura_bold"
