--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,14 +41,14 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_weight="3"
-                android:layout_marginLeft="15dp"
+                android:layout_marginStart="15dp"
                 android:background="@drawable/base_button"
-                android:text="Галерея"
+                android:text="@string/menu_gallery"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 android:fontFamily="@font/jura_bold"
-                android:textSize="18dp"/>
+                android:textSize="18sp"/>
 
             <Button
                 android:id="@+id/loginButton"
@@ -63,7 +63,7 @@
                 app:layout_constraintRight_toRightOf="@id/fkBlurView"
                 app:layout_constraintTop_toTopOf="parent"
                 android:fontFamily="@font/jura_bold"
-                android:textSize="18dp"/>
+                android:textSize="18sp"/>
         </com.github.furkankaplan.fkblurview.FKBlurView>
 
         <androidx.cardview.widget.CardView
@@ -75,62 +75,61 @@
             android:layout_marginTop="130dp"
             android:padding="10dp"
             android:backgroundTint="@color/transparent">
-        <com.github.furkankaplan.fkblurview.FKBlurView
-            android:id="@+id/fkBlurViewMenu"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:elevation="20dp"
-            android:background="#11E9E9E9"
-            android:orientation="horizontal">
-            <LinearLayout
+            <com.github.furkankaplan.fkblurview.FKBlurView
+                android:id="@+id/fkBlurViewMenu"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:paddingHorizontal="40dp"
-                android:paddingVertical="60dp"
-                android:layout_marginTop="100dp">
-
-                <Button
-                    android:id="@+id/generationButtonGradients"
+                android:layout_height="match_parent"
+                android:elevation="20dp"
+                android:background="#11E9E9E9"
+                android:orientation="horizontal">
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/base_button"
-                    android:text="@string/gradients_btn_text"
-                    android:fontFamily="@font/jura_bold"
-                    android:textSize="18dp"/>
+                    android:orientation="vertical"
+                    android:paddingHorizontal="40dp"
+                    android:paddingVertical="60dp"
+                    android:layout_marginTop="100dp">
 
-                <Button
-                    android:id="@+id/generationButtonShapes"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/base_button"
-                    android:layout_marginTop="20dp"
-                    android:text="@string/figures_btn_text"
-                    android:fontFamily="@font/jura_bold"
-                    android:textSize="18dp"/>
+                    <Button
+                        android:id="@+id/generationButtonGradients"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/base_button"
+                        android:text="@string/generator_gradients"
+                        android:fontFamily="@font/jura_bold"
+                        android:textSize="18sp"/>
 
-                <Button
-                    android:id="@+id/generationButtonInterference"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/base_button"
-                    android:layout_marginTop="20dp"
-                    android:text="@string/interference_btn_text"
-                    android:fontFamily="@font/jura_bold"
-                    android:textSize="18dp"/>
+                    <Button
+                        android:id="@+id/generationButtonShapes"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/base_button"
+                        android:layout_marginTop="20dp"
+                        android:text="@string/generator_shapes"
+                        android:fontFamily="@font/jura_bold"
+                        android:textSize="18sp"/>
 
-                <Button
-                    android:id="@+id/generationButtonFractals"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/base_button"
-                    android:layout_marginTop="20dp"
-                    android:text="@string/fractals_btn_text"
-                    android:fontFamily="@font/jura_bold"
-                    android:textSize="18dp"/>
-            </LinearLayout>
-        </com.github.furkankaplan.fkblurview.FKBlurView>
+                    <Button
+                        android:id="@+id/generationButtonInterference"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/base_button"
+                        android:layout_marginTop="20dp"
+                        android:text="@string/generator_interference"
+                        android:fontFamily="@font/jura_bold"
+                        android:textSize="18sp"/>
+
+                    <Button
+                        android:id="@+id/generationButtonFractals"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/base_button"
+                        android:layout_marginTop="20dp"
+                        android:text="@string/generator_fractals"
+                        android:fontFamily="@font/jura_bold"
+                        android:textSize="18sp"/>
+                </LinearLayout>
+            </com.github.furkankaplan.fkblurview.FKBlurView>
         </androidx.cardview.widget.CardView>
-
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
