--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:maxWidth="500px">
+    tools:maxWidth="200dp">
 
     <ImageView
         android:id="@+id/cardImage"
@@ -23,11 +23,11 @@
         android:layout_height="33dp"
         android:layout_gravity="center"
         android:src="@drawable/heart"
-        android:layout_marginRight="5dp"
+        android:layout_marginEnd="5dp"
         android:layout_marginBottom="3dp"
         app:layout_constraintBottom_toBottomOf="@id/cardImage"
         app:layout_constraintEnd_toEndOf="@id/cardImage"
-        android:tint="#FF3636"/>
+        tools:tint="#FF3636"/>
 
     <TextView
         android:id="@+id/cardText"
