--- a/app/src/main/res/layout/fragment_input_digit_range_parameter.xml
+++ b/app/src/main/res/layout/fragment_input_digit_range_parameter.xml
@@ -28,7 +28,7 @@
         android:id="@+id/rangeSymbol"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="-"
+        android:text="@string/range_separator"
         android:layout_centerVertical="true"
         android:textSize="20sp"
         android:textColor="@color/white"
