--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -19,7 +19,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Параметры"
+            android:text="@string/parameters"
             android:gravity="center"
             android:textSize="30sp"
             android:textColor="@color/white"
