--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
     android:textSize="15sp"
-    android:gravity="left"
+    android:gravity="start"
     android:textColor="@color/white"
     android:padding="5dip"
     tools:text="text"/>
