--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,6 @@
     <color name="gray_A">#AAAAAA</color>
     <color name="gray_5">#555555</color>
     <color name="android_studio_dark_theme">#2D2F31</color>
+    <color name="gray_E">#FFEEEEEE</color>
+    <color name="red_like">#FFFF3636</color>
 </resources>
