--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -21,7 +21,7 @@
             android:orientation="horizontal"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:background="#FF3E3A71">
+            android:background="@color/header_color_default">
             <ImageButton
                 android:id="@+id/toMenuButton"
                 android:layout_width="35dp"
@@ -33,7 +33,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_marginHorizontal="5dp"
-                app:tint="#FFE9E9E9"/>
+                app:tint="@color/default_icon_color"/>
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -77,7 +77,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:background="@color/transparent"
                 android:layout_marginHorizontal="5dp"
-                app:tint="#FFE9E9E9"/>
+                app:tint="@color/default_icon_color"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.recyclerview.widget.RecyclerView
